2008-01-20  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/defaults.jhbuildrc,
	jhbuild/config.py, jhbuild/modtypes/__init__.py: removed force_policy
	configure option; force build_policy to 'all' when --force-policy is
	passed to build or buildone options.

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* modulesets/gnome-2.22.modules: added ghex dependency for nemiver

2008-01-19  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules: added gmp to bootstrap module, as it is
	a dependency of guile which has been added there yesterday.
	(closes: #510666)

2008-01-19  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/config.py, jhbuild/defaults.jhbuildrc,
	jhbuild/modtypes/autotools.py, jhbuild/modtypes/waf.py, tests/mock.py,
	tests/tests.py: added a new makecheck_advisory option, to specify
	whether failures when running "make check" should be advisory only
	and not cause the module to fail; complete with documentation and unit
	tests.  (closes: #310544)

2008-01-19  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/darcs.py: check for darcs command before
	trying to use it, to provide informative error message.
	(closes: #510633)

2008-01-19  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/__init__.py, jhbuild/modtypes/autotools.py,
	jhbuild/modtypes/cmake.py, jhbuild/modtypes/distutils.py,
	jhbuild/modtypes/linux.py, jhbuild/modtypes/mesa.py,
	jhbuild/modtypes/mozillamodule.py, jhbuild/modtypes/perl.py,
	jhbuild/modtypes/testmodule.py, jhbuild/modtypes/waf.py, tests/mock.py,
	tests/tests.py: updated test module type to the new (but not recent)
	system of method attributes to get next and error states (and killed
	old code); appropriately skip modules according to build policy when
	running with nonetwork set.  (closes: #508653)

2008-01-19  Frederic Peters  <fpeters@0d.be>

	* tests/mock.py, tests/tests.py: new unit tests covering a bit of build