@@ -1,5 +1,10 @@
 2008-01-20  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/modtypes/__init__.py: abort on dependency node missing a
+	package attribute.
+
+2008-01-20  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/commands/base.py, jhbuild/defaults.jhbuildrc,
 	jhbuild/config.py, jhbuild/modtypes/__init__.py: removed force_policy
 	configure option; force build_policy to 'all' when --force-policy is
